--- a/src/scss/_component/_text.scss
+++ b/src/scss/_component/_text.scss
@@ -2,22 +2,46 @@
 // text
 // ------------------------------
 
-.c-text--1{
-    font-size: 3.2rem;
+.c-text--52 {
+    font-size: 5.2rem;
 }
-.c-text--2{
-    font-size: 2.4rem;
+
+.c-text--42 {
+    font-size: 4.2rem;
 }
-.c-text--3{
-    font-size: 1.8rem;
+
+.c-text--28 {
+    font-size: 2.8rem;
 }
-.c-text--center{
+
+.c-text--22 {
+    font-size: 2.2rem;
+}
+
+.c-text--17 {
+    font-size: 1.7rem;
+}
+
+.c-text--14 {
+    font-size: 1.4rem;
+}
+
+.c-text--center {
     text-align: center;
 }
 
+.c-text--right {
+    text-align: right;
+}
 
-@media screen and (max-width: $breakPoint){
-    .c-text--1{
-        font-size: 2.4rem;
-    }
+.c-text--fw300 {
+    font-weight: 300;
+}x
+
+.c-text--fw400 {
+    font-weight: 400;
+}
+
+.c-text--fw700 {
+    font-weight: 700;
 }
