--- a/src/scss/_helper/_font.scss
+++ b/src/scss/_helper/_font.scss
@@ -2,6 +2,12 @@
 // font
 // ------------------------------
 
-.h-font--yugo{
-    font-family: '游ゴシック体', 'Yu Gothic', YuGothic, sans-serif;
+.h-font--inter {
+    // 400, 700
+    font-family: 'Inter', sans-serif;
+}
+
+.h-font--noto {
+    // 300, 400
+    font-family: 'Noto Sans JP', sans-serif;
 }
