--- a/src/scss/_component/_header.scss
+++ b/src/scss/_component/_header.scss
@@ -2,6 +2,17 @@
 // header
 // ------------------------------
 
-.c-header{}
+.c-header {
+    display: flex;
+    align-items: center;
+    min-height: 74px;
+    padding: 14px 24px;
+    background: $color-white;
 
-@media screen and (max-width: $breakPoint){}
+    &__logo {
+        width: 63px;
+        a {
+            display: block;
+        }
+    }
+}
