--- a/src/scss/_component/_btn.scss
+++ b/src/scss/_component/_btn.scss
@@ -2,19 +2,68 @@
 // btn
 // ------------------------------
 
-.c-btn{
-    a{
-        display: inline-block;
+.c-btn-more {
+    display: inline-block;
+    min-width: 272px;
+
+    a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 19px 30px 18px;
+        border: 1px solid $color-gray03;
+        border-radius: 110px;
+    }
+
+    span {
+        flex: 1;
+        font-size: 2.2rem;
+        @extend .h-font--inter;
+        color: $color-default-black;
+        line-height: 1;
+        font-weight: 400;
         text-align: center;
-		min-width: 200px;
-        padding: .65em;
+    }
+
+    i {
+        font-size: 2.2rem;
     }
 }
 
-@media screen and (max-width: $breakPoint){
-	.c-btn{
-        a{
-			width: 100%;
+.c-btn-box {
+    display: inline-block;
+    min-width: 192px;
+    &--blue {
+        a {
+            background: $color-blue;
         }
-	}
+    }
+    &--orange {
+        a {
+            background: $color-orange02;
+        }
+    }
+
+    a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 11px 15px 12px;
+        border-radius: 7px;
+    }
+
+    span {
+        flex: 1;
+        margin-top: 3px;
+        font-size: 1.7rem;
+        @extend .h-font--inter;
+        color: $color-default-black;
+        line-height: 1;
+        font-weight: 400;
+        text-align: center;
+    }
+
+    i {
+        font-size: 2rem;
+    }
 }
