--- a/src/scss/_component/_footer.scss
+++ b/src/scss/_component/_footer.scss
@@ -2,6 +2,7 @@
 // footer
 // ------------------------------
 
-.c-footer{}
-
-@media screen and (max-width: $breakPoint){}
+.c-footer {
+    height: 211px;
+    background: $color-gray04;
+}
