--- a/src/pug/_template/_meta.pug
+++ b/src/pug/_template/_meta.pug
@@ -5,6 +5,7 @@ meta(name="format-detection" content="telephone=no, address=no, email=no")
 link(rel="preconnect" href="https://fonts.googleapis.com")
 link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
 link(href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Sans+JP:wght@300;400&display=swap" rel="stylesheet")
+script(src="https://kit.fontawesome.com/4c86b5426c.js" crossorigin="anonymous")
 
 
 //- ページ固有のメタを設定する場合は、各コメント内の設定を該当のpugファイルのvarsへ記載する
