--- a/src/scss/_foundation/_base.scss
+++ b/src/scss/_foundation/_base.scss
@@ -8,7 +8,7 @@ html {
 
 body {
     min-width: $site-w-min;
-    background: $color-white;
+    background: $color-gray01;
     color: $color-default-black;
     line-height: 2;
     font-size: 1.4rem;
