--- a/src/scss/_js/_slide.scss
+++ b/src/scss/_js/_slide.scss
@@ -2,12 +2,6 @@
 // slide
 // ------------------------------
 
-@keyframes fadeOut {
-    0% {
-        opacity: 0;
-        z-index: 0;
-    }
-}
 
 .js-slide-top {
     position: relative;
@@ -18,6 +12,7 @@
         position: absolute;
         top: 0;
         left: 0;
+        z-index: 0;
     }
 }
 
@@ -26,5 +21,10 @@
     gap: 0 13px;
     &__item {
         width: 24.09%;
+        cursor: pointer;
+        @include transition;
+        &:hover {
+            opacity: .6;
+        }
     }
 }
